# flowmap-cli

./: .gitignore  LICENSE  README.md  plan.md  pyproject.toml  requirements.txt  test.py
flowmap/: __main__.py  cli.py  config.py  embeddings.py  indexer.py  reindex.py  render.py  state.py  store.py
flowmap/history/: __init__.py  git_ops.py  structural_diff.py  timeline.py
flowmap/parsing/: __init__.py  chunker.py  languages.py
flowmap/search/: __init__.py  hybrid.py  ripgrep.py
flowmap/services/: __init__.py  file_resolver.py  indexing.py  map_builder.py  symbol_lookup.py
tests/: conftest.py  test_chunker.py  test_cli_commands.py  test_config.py  test_dedup.py  test_embeddings.py  test_end_to_end.py  test_history.py  test_hybrid.py  test_output_format.py  test_profiles_e2e.py  test_query_classifier.py  test_reindex.py  test_render.py  test_reranker.py  test_ripgrep.py  test_rrf.py  test_services.py  test_state.py  test_store_integration.py  test_timeline_integration.py
