[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "flowmap"
version = "0.2.0"
description = "Cross-repo code intelligence CLI for LLMs"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "lancedb>=0.20",
    "pyarrow>=14",
    "pathspec>=0.12",
    "tqdm>=4.60",
    "pyyaml>=6.0",
    "requests>=2.28",
    "tree-sitter-yaml>=0.7.2",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-json>=0.24.8",
    "tree-sitter-swift>=0.0.1",
]

[project.optional-dependencies]
local-embeddings = [
    "sentence-transformers>=3.0",
    "torch>=2.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
flowmap = "flowmap.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flowmap*"]
